test_suite/tests/ui/fail/invalid_attr_value_for_command/invalid_command_help.stderr
error: custom attribute panicked
 --> $DIR/invalid_command_help.rs:3:1
  |
3 | #[command(help=123)]
  | ^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: `help` must be a string literal
